@startuml ch6_state_prompt
' ============================================================
' CHAPITRE 6 — Diagramme d'États — Cycle de Vie Prompt Template
' Figure 6.x : Machine à états d'un template de prompt
' ============================================================

skinparam backgroundColor #FFFFFF
skinparam defaultFontName Arial
skinparam defaultFontSize 12
skinparam roundcorner 10

skinparam state {
  BackgroundColor #ECF0F1
  BorderColor #2C3E50
  FontColor #2C3E50
}

title <size:16><b>Diagramme d'États — Cycle de Vie d'un Template de Prompt</b></size>

[*] --> DRAFT : Création\npar l'administrateur

state DRAFT #F9E79F {
}
state PUBLISHED #82E0AA {
}
state ARCHIVED #D5DBDB {
}
state NEW_VERSION #AED6F1 {
}

DRAFT --> PUBLISHED : publier()\nValidation syntaxe Jinja2
DRAFT --> ARCHIVED : archiver()\nSuppression logique

PUBLISHED --> ARCHIVED : archiver()\nRetrait du catalogue
PUBLISHED --> NEW_VERSION : modifier()\nCréation version N+1

NEW_VERSION --> DRAFT : [status = DRAFT]\nversion N+1 en brouillon
note right of NEW_VERSION
  L'ancienne version reste
  PUBLISHED jusqu'à
  publication de la nouvelle
end note

ARCHIVED --> [*]

note left of DRAFT
  L'administrateur peut
  modifier le contenu,
  les variables Jinja2
  et les métadonnées
end note

note right of PUBLISHED
  Seuls les templates
  PUBLISHED sont
  disponibles pour
  le rendu dynamique
end note

@enduml
